cluster/apps/networking/traefik/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
    goldilocks.fairwinds.com/enabled: "true"
